--- a/app/src/main/res/layout/localsetting_addr219_layout.xml
+++ b/app/src/main/res/layout/localsetting_addr219_layout.xml
@@ -1,138 +1,238 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical">
 
-   <LinearLayout
+   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
-       android:orientation="horizontal"
        android:gravity="center_vertical"
-       android:weightSum="10"
        >
-     <TextView
-         android:layout_width="0dp"
-         android:layout_height="wrap_content"
-         android:layout_weight="2"
-         android:text="功能启用:"
-         />
-       <EditText
-           android:layout_width="0dp"
+
+       <TextView
+           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_weight="6"
-           />
-       <gc.dtu.weeg.dtugc.myview.slidingbutton.SlidingToggleButton
-           android:layout_weight="2"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content" />
-   </LinearLayout>
+           android:layout_alignParentLeft="true"
+           android:layout_centerVertical="true"
+           android:layout_marginLeft="0dp"
+           android:text="功能启用:" />
+
+       <EditText
+           android:id="@+id/local_edit_219_timegap"
+           android:layout_width="180sp"
+           android:layout_height="wrap_content"
+           android:layout_centerInParent="true"
+           android:enabled="false"
+           android:inputType="number"
+            />
+        <gc.dtu.weeg.dtugc.myview.slidingbutton.SlidingToggleButton
+            android:id="@+id/local_extra_219_first"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            />
+
+   </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#CFCFCF" />
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+        android:id="@+id/local_219_detail_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
     >
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:weightSum="10"
-            >
+            android:layout_height="wrap_content">
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/local_219_lable1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="0dp"
                 android:text="时段1:"
                 />
-           <TextView
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"
-               android:layout_weight="2"
-               />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:src="@drawable/sperate"
-                />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:weightSum="10"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/local_219_lable1"
+                android:layout_toLeftOf="@id/local_219_checkbut_1"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                >
+                <TextView
+                    android:id="@+id/local_219_starttime1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:background="@drawable/slidebuttonbackselect"
+                    android:enabled="false"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:src="@drawable/sperate"
+                    />
+                <TextView
+                    android:id="@+id/local_219_endtime1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:background="@drawable/slidebuttonbackselect"
+                    android:enabled="false"
+                    />
+            </LinearLayout>
             <gc.dtu.weeg.dtugc.myview.slidingbutton.SlidingToggleButton
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:weightSum="10"
-            >
-            <TextView
-                android:layout_width="0dp"
+                android:id="@+id/local_219_checkbut_1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                />
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#CFCFCF" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/local_219_lable2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="0dp"
                 android:text="时段2:"
                 />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:src="@drawable/sperate"
-                />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:weightSum="10"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/local_219_lable2"
+                android:layout_toLeftOf="@id/local_219_checkbut_2"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                >
+                <TextView
+                    android:id="@+id/local_219_starttime2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:background="@drawable/slidebuttonbackselect"
+                    android:enabled="false"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:src="@drawable/sperate"
+                    />
+                <TextView
+                    android:id="@+id/local_219_endtime2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:background="@drawable/slidebuttonbackselect"
+                    android:enabled="false"
+                    />
+            </LinearLayout>
             <gc.dtu.weeg.dtugc.myview.slidingbutton.SlidingToggleButton
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:weightSum="10"
-            >
-            <TextView
-                android:layout_width="0dp"
+                android:id="@+id/local_219_checkbut_2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:enabled="false"
+                />
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#CFCFCF" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/local_219_lable3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="0dp"
                 android:text="时段3:"
                 />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:src="@drawable/sperate"
-                />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:weightSum="10"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/local_219_lable3"
+                android:layout_toLeftOf="@id/local_219_checkbut_3"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                >
+                <TextView
+                    android:id="@+id/local_219_starttime3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:background="@drawable/slidebuttonbackselect"
+                    android:enabled="false"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:src="@drawable/sperate"
+                    />
+                <TextView
+                    android:id="@+id/local_219_endtime3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:background="@drawable/slidebuttonbackselect"
+                    android:enabled="false"
+                    />
+            </LinearLayout>
             <gc.dtu.weeg.dtugc.myview.slidingbutton.SlidingToggleButton
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+                android:id="@+id/local_219_checkbut_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                />
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#CFCFCF" />
+
     </LinearLayout>
 </LinearLayout>
