--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="color_selected">#303F9F</color>
     <!--warn -->
     <color name="color_warning">#b6062f</color>
+    <color name="color_grey">#FF757575</color>
 </resources>
